[package]
name = "lf"
version = "0.6.1"
authors = ["workingj <workingj@outlook.de>"]

[dependencies]
structopt = "0.2.13"
chrono = "0.4.6"

[profile.release]
panic = "abort"    # Remove Error Messages
lto = true         # Link Time Optimisation
codegen-units = 1
incremental = false
opt-level = "z"

[profile.dev]
panic = "abort"
lto = false
codegen-units = 1
incremental = true
opt-level = "z"