[package]
name = "lf"
version = "1.1.2"
authors = ["workingj <workingj@outlook.de>"]
edition = "2018"

[dependencies]
structopt = "0.2.15"
termcolor = "1.0.5"
chrono = "0.4.6"

[profile.release]
codegen-units = 1
debug = false      # Include debug information
debug-assertions = false
incremental = false
lto = true         # Link Time Optimisation usually reduces size of binaries
opt-level = 3      # 0 - 3 optimizations "s" - "z" reduze size
overflow-checks = false
panic = "abort"    # Remove Error Messages
rpath = false


[profile.dev]
codegen-units = 16 # improves compiletimes, but prevents optimizations 
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = "unwind"
rpath = false

